--- a/custom.org
+++ b/custom.org
@@ -2234,8 +2234,8 @@ function.
     (require 'nord-theme)
     (require 'color-theme-sanityinc-tomorrow)
 
-    ;; (load-theme 'sanityinc-tomorrow-bright)
-    (load-theme 'sanityinc-tomorrow-day)
+    (load-theme 'sanityinc-tomorrow-bright)
+    ;; (load-theme 'sanityinc-tomorrow-day)
   #+END_SRC
 
 * term
