--- a/custom.org
+++ b/custom.org
@@ -2508,3 +2508,19 @@ function.
         :major-modes '(zig-mode)
         :server-id 'zls)))
   #+end_src
+
+  =zig config= then modified a bit to arrive at:
+
+  #+begin_src js
+    {
+      "enable_semantic_tokens": true,
+      "enable_snippets": true,
+      "include_at_in_builtins": false,
+      "include_at_in_builtins": true,
+      "max_detail_length": 1048576,
+      "operator_completions": true,
+      "warn_style": true,
+      "zig_exe_path": "/bin/zig",
+      "zig_lib_path": "/usr/lib/zig"
+    }
+  #+end_src
