--- a/custom.org
+++ b/custom.org
@@ -1074,13 +1074,6 @@ function.
     (use-package flycheck
       :ensure t)
 
-    (use-package lsp-mode
-      :ensure t
-      :config
-      (setq-default lsp-eldoc-render-all nil
-                    lsp-signature-doc-lines 20)
-      (set-face-attribute 'lsp-face-highlight-textual nil :underline t))
-
     (use-package go-mode
       :ensure t
       :bind
@@ -1352,6 +1345,22 @@ function.
   #+BEGIN_SRC emacs-lisp
     (setq create-lockfiles nil)
   #+END_SRC
+
+* lsp-mode
+
+  #+begin_src emacs-lisp
+    (require 'lsp-mode)
+
+    (use-package lsp-mode
+      :ensure t
+      :config
+      (setq-default
+       lsp-eldoc-render-all nil
+       lsp-signature-doc-lines 20           ; limit lines shown in docs
+       lsp-enable-links nil                 ; disable clickable links in files
+       )
+      (set-face-attribute 'lsp-face-highlight-textual nil :underline t))
+  #+end_src
 
 * man
 
@@ -1980,7 +1989,16 @@ function.
       (define-key python-mode-map (kbd "C-M-n") 'python-nav-forward-block)
       (define-key python-mode-map (kbd "C-M-p") 'python-nav-backward-block))
 
-    (add-hook 'python-mode-hook 'k20e/python-mode-hook)
+    ;; (add-hook 'python-mode-hook 'k20e/python-mode-hook)
+
+    (require 'python)
+
+    (use-package lsp-mode
+      :hook ((python-mode . lsp-deferred))
+      :commands (lsp lsp-deferred)
+      :config (setq-default lsp-pylsp-plugins-rope-completion-enabled t))
+
+    ;; (use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
   #+END_SRC
 
 ** IPython
